fix #1774, remove MaxPermSize JVM option as JDK8 no longer support it.